# rule-cloner

./: Cargo.toml  LICENSE-MIT  README.md  config.toml.example
.github/workflows/: ci.yml  release.yml
src/: log.rs  main.rs
src/config/: cli.rs  file.rs
src/docker/: mod.rs
src/node_pkg/: mod.rs
